Cleanup Restaurant.java