@@ -12,13 +12,10 @@ public class Restaurant extends AbstractNamedEntity {
 
     @ElementCollection(fetch = FetchType.EAGER)
     @CollectionTable(name = "DISHES", joinColumns = @JoinColumn(name = "RESTAURANT_ID"))
-    private List<Dish> menu;// = new HashSet<>();
-
-    /*@Column(name = "DATE")
-    private LocalDate date = LocalDate.now();*/
+    private List<Dish> menu;
 
     public void setMenu(Collection<Dish> menu) {
-        this.menu = new ArrayList<>(List.copyOf(menu));//List.copyOf(menu);//List.copyOf(menu);
+        this.menu = new ArrayList<>(List.copyOf(menu));
     }
 
     public List<Dish> getMenu() {
@@ -30,19 +27,7 @@ public class Restaurant extends AbstractNamedEntity {
             menu = new ArrayList<>();
         }
         menu.add(dishes);
-//        menu.addAll(CollectionUtils.arrayToList(dishes));
-        /*for (Dish dish : dishes) {
-            menu.add(new Dish(dish.getName(), dish.getCost()));
-        }*/
     }
-
-   /* public void setDate(LocalDate date) {
-        this.date = date;
-    }
-
-    public LocalDate getDate() {
-        return date;
-    }*/
 
     public Restaurant() {
 
@@ -52,28 +37,16 @@ public class Restaurant extends AbstractNamedEntity {
         super(id, name);
     }
 
-    /*public Restaurant(int id, String name, LocalDate date) {
-        this(id, name);
-        this.date = date;
-    }*/
-
-    /*public Restaurant(String name) {
-        this.name = name;
-    }*/
-
     public Restaurant(String name, Dish... dishes) {
-        super(null, name);//this(name);
-        menu = new ArrayList<>(List.copyOf(menu));
+        this(null, name, dishes);
     }
 
     public Restaurant(Integer id, String name, Dish... dishes) {
         super(id, name);
-        menu = new ArrayList<Dish>(Arrays.asList(dishes));
+        menu = new ArrayList<>(List.copyOf(Arrays.asList(dishes)));
     }
 
     public Restaurant(Restaurant restaurant) {
-        super(restaurant.getId(), restaurant.getName());
-        menu = new ArrayList<>(restaurant.getMenu());
-//        Collections.copy(menu, restaurant.getMenu());
+        this(restaurant.getId(), restaurant.getName(), restaurant.getMenu().toArray(new Dish[0]));
     }
 }
